# lharmony

./: .pre-commit-config.yaml  CITATION.cff  CMakeLists.txt  CTestConfig.cmake  README.md  annotated.html  annotated_dup.js  classes.html  classlimes_1_1harmony_1_1Chord-members.html  classlimes_1_1harmony_1_1Chord.html  classlimes_1_1harmony_1_1Chord.js  classlimes_1_1harmony_1_1CompoundInterval-members.html  classlimes_1_1harmony_1_1CompoundInterval.html  classlimes_1_1harmony_1_1CompoundInterval.js  classlimes_1_1harmony_1_1CompoundInterval__inherit__graph.map  classlimes_1_1harmony_1_1CompoundInterval__inherit__graph.md5  classlimes_1_1harmony_1_1Interval-members.html  classlimes_1_1harmony_1_1Interval.html  classlimes_1_1harmony_1_1Interval.js  classlimes_1_1harmony_1_1Interval__inherit__graph.map  classlimes_1_1harmony_1_1Interval__inherit__graph.md5  classlimes_1_1harmony_1_1MicrotonalInterval-members.html  classlimes_1_1harmony_1_1MicrotonalInterval.html  classlimes_1_1harmony_1_1MicrotonalInterval.js  classlimes_1_1harmony_1_1Pitch-members.html  classlimes_1_1harmony_1_1Pitch.html  classlimes_1_1harmony_1_1Pitch.js  classlimes_1_1harmony_1_1_chord-members.html  classlimes_1_1harmony_1_1_chord.html  classlimes_1_1harmony_1_1_chord.js  classlimes_1_1harmony_1_1_compound_interval-members.html  classlimes_1_1harmony_1_1_compound_interval.html  classlimes_1_1harmony_1_1_compound_interval.js  classlimes_1_1harmony_1_1_compound_interval__inherit__graph.map  classlimes_1_1harmony_1_1_compound_interval__inherit__graph.md5  classlimes_1_1harmony_1_1_interval-members.html  classlimes_1_1harmony_1_1_interval.html  classlimes_1_1harmony_1_1_interval.js  classlimes_1_1harmony_1_1_interval__inherit__graph.map  classlimes_1_1harmony_1_1_interval__inherit__graph.md5  (+373 more)
.github/workflows/: ci.yml  docs.yml
cmake/: lharmony-config.in  version.in
cmake/presets/: base.json
docs/: CMakeLists.txt
include/lharmony/: lharmony.h  lharmony_Chord.h  lharmony_Chromatic.h  lharmony_CompoundInterval.h  lharmony_CompoundInterval_impl.h  lharmony_Interval.h  lharmony_IntervalConstants.h  lharmony_Interval_impl.h  lharmony_KeySignature.h  lharmony_KeySignatureConstants.h  lharmony_KeySignature_impl.h  lharmony_MicrotonalInterval.h  lharmony_Mode.h  lharmony_Octatonic.h  lharmony_OvertoneSeries.h  lharmony_Pitch.h  lharmony_PitchClass.h  lharmony_PitchUtils.h  lharmony_Scale.h  lharmony_ToneRow.h  lharmony_WholeTone.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  concepts_0.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  (+33 more)
src/: CMakeLists.txt  lharmony_Chord.cpp  lharmony_Chromatic.cpp  lharmony_CompoundInterval.cpp  lharmony_Interval.cpp  lharmony_KeySignature.cpp  lharmony_Mode.cpp  lharmony_Octatonic.cpp  lharmony_Pitch.cpp  lharmony_PitchClass.cpp  lharmony_Scale.cpp  lharmony_ToneRow.cpp  lharmony_WholeTone.cpp
tests/: CMakeLists.txt  CompoundInterval.cpp  Interval.cpp  KeySignature.cpp  Mode.cpp  OvertoneSeries.cpp  Pitch.cpp  PitchUtils.cpp  ToneRow.cpp
tests/FindPackage/: CMakeLists.txt  CreateTests.cmake  main.cpp
